@@ -1,2 +1,2 @@
 bbcnews minister
-Your .*\d+.* search results for
+<span class="number active">1</span>
