@@ -1,6 +1,6 @@
 debcontents surfraw
 usr/bin.*surfraw
-debcontents -u surfraw
+debcontents -u -distro=karmic surfraw
 usr/bin.*surfraw
 debcontents -distro=slink -a grep
 base/help/.*grep
