@@ -1,4 +1,4 @@
 debwiki LowThresholdNMU
-LowThresholdNMU.* \. \. \. \d+ match
+Results <strong>1 - 25</strong> of
 debwiki -w MaintainerScripts
-English/MaintainerScripts.* \. \. \.
+English/MaintainerScripts
